--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </style>
   </head>
   <body>
+  <h1> changed </h1>
     <iframe id="backgroundImage" src=""></iframe>
     <ntp-app></ntp-app>
     <script type="module" src="new_tab_page.js"></script>
